Corrected translation of 'Dark Mode Toggle' to German.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Mode Toggle</title>
+    <title>Dunkelmodus Umschalter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Willkommen zum Dunkelmodus Toggle!</h1>
+    <h1>Willkommen zum Dunkelmodus Umschalter!</h1>
     <script src="dunkelmodus-toggle.js"></script>
 </body>
 </html>
